[package]
name = "native-core"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
ahash = "0.8"
bytemuck = "1"
downcast-rs = "2"
dyn-clone = "1"
glam = "0.30"
godot = "0.4"
image = { version = "0.25", default-features = false }
image-atlas = "0.4"
rstar = "0.12"
slab = "0.4"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["html_reports"] }
