[package]
name = "tilemap-sandbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
ahash = "0.8"
downcast-rs = "2"
dyn-clone = "1"
glam = "0.28"
godot = "0.2"
image = { version = "0.25", default-features = false }
image-atlas = "0.4"
rand = "0.8"
rstar = "0.12"
slab = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
